# aoc24

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  add_day.sh  main.cpp
include/: day.hpp  eight.hpp  eleven.hpp  five.hpp  four.hpp  nine.hpp  one.hpp  seven.hpp  six.hpp  ten.hpp  three.hpp  twelve.hpp  two.hpp
src/: eight.cpp  eleven.cpp  five.cpp  four.cpp  nine.cpp  one.cpp  seven.cpp  six.cpp  ten.cpp  three.cpp  twelve.cpp  two.cpp
templates/: _TEMPLATE.cpp  _TEMPLATE.hpp
test/: test_solutions.cpp  unit_tests.cpp
